# tourist-service

./: .env.development  docker-compose.yml  pyproject.toml
src/: main.py
src/application/schemas/: tourist.py
src/application/services/: tourist_service.py
src/domain/models/: preference.py  tourist.py
src/domain/repositories/: tourist_repository.py
src/infrastructure/config/: config.py  container.py  settings.py
src/infrastructure/controllers/: tourist_controller.py
src/infrastructure/repositories/: in_memory_tourist_repository.py  mongodb_tourist_repository.py
src/lifecycle/: events.py
src/tests/: test_tourist_service.py
