[tool.poetry]
name = "tourist-service"
version = "0.1.0"
description = "Tourist Service for managing tourist preferences and recommendations"
authors = ["G K Ranasinghe <gkranasinghe3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
pydantic = {extras = ["email"], version = "^2.10.4"}
pytest = "^8.3.4"
uvicorn = "^0.34.0"
pymongo = "^4.10.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "python -m uvicorn src.main:app --reload"
lint = "flake8 src"

